--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "uld-cli"
-version = "1.0.0"
+version = "1.0.3"
 description = "Unified Local Downloader - A single CLI for torrents, magnet links, videos, and direct downloads"
 readme = "README.md"
 license = "MIT"
@@ -30,13 +30,13 @@ dependencies = [
     "rich>=13.0.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "yt-dlp>=2024.0.0",
+    "libtorrent>=2.0.11",
+    "libtorrent-windows-dll>=0.0.3; sys_platform == 'win32'",
 ]
 
 [project.optional-dependencies]
-torrent = ["libtorrent>=2.0.11"]
-video = ["yt-dlp>=2025.12.8"]
 http = ["httpx>=0.28.1"]
-all = ["uld-cli[torrent,video,http]"]
 dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
