--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Set up Python
         run: uv python install 3.12
 
+      - name: Install dependencies
+        run: uv sync --all-extras
+
       - name: Run Ruff linter
         run: uv run ruff check src tests
 
@@ -63,6 +66,9 @@ jobs:
       - name: Set up Python
         run: uv python install 3.12
 
+      - name: Install dependencies
+        run: uv sync --all-extras
+
       - name: Build package
         run: uv run python -m build
 
@@ -87,6 +93,9 @@ jobs:
 
       - name: Set up Python
         run: uv python install 3.12
+
+      - name: Install dependencies
+        run: uv sync --all-extras
 
       - name: Build package
         run: uv run python -m build
