Refactor HTTP engine implementation and update project script entry point. Introduce `HTTPEngine` for direct file downloads using `httpx`, enhancing download capabilities and error handling. Update `pyproject.toml` to reflect changes in script execution.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dev = [
 ]
 
 [project.scripts]
-uld = "uld.cli:app"
+uld = "uld.cli:run"
 
 [project.urls]
 Homepage = "https://github.com/jd-co/uld"
