--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "uld-cli"
-version = "1.0.6"
+version = "1.0.7"
 description = "Unified Local Downloader - A single CLI for torrents, magnet links, videos, and direct downloads"
 readme = "README.md"
 license = "MIT"
@@ -33,10 +33,10 @@ dependencies = [
     "yt-dlp>=2024.0.0",
     "libtorrent>=2.0.11",
     "libtorrent-windows-dll>=0.0.3; sys_platform == 'win32'",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
-http = ["httpx>=0.28.1"]
 dev = [
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
